--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Helix32",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.6"
+    "mongoose": "^5.11.13",
+    "nodemon": "^2.0.7"
   }
 }
